package simulator.model;

public class Event extends Profile {
    public Event() {
    }


}